# nanoViT

./: .gitignore  README.md  lr_sweep.ipynb  model.py  play.py  pyproject.toml  setup.py  train_cifar100.py  train_dog_cat.py  train_imagenet1k.py  train_imagenet_1k.py
nanoclip/: __init__.py  train_dog_cat.py  vit.py
nanoclip/weights/: clip.py
nanovit/: __init__.py  convmixer.py  schedule.py  vit.py
nanovit/weights/: clip.py  init.py
tests/: test_vit_clip.py
tutorials/: vit_from_scratch.ipynb
