[project]
name = "nanovit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.1.0",
    "einops>=0.8.0",
    "huggingface-hub>=0.26.2",
    "ipykernel>=6.29.5",
    "jaxtyping>=0.2.34",
    "jupyter>=1.1.1",
    "pillow>=11.0.0",
    "pytest>=8.3.3",
    "sentence-transformers>=3.2.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.66.6",
    "transformers>=4.46.1",
    "wandb>=0.18.5",
]
